<resources>
    <string name="app_name">SpotiCloud</string>
    <string name="start_heading">Welcome to SpotiCloud</string>
    <string name="logo">Logo</string>
    <string name="start_choice">OR/AND</string>
    <string name="signin_soundcloud">Sign in with SoundCloud</string>
    <string name="signin_spotify">Sign in with Spotify</string>
    <string name="header_soundcloud_auth">Sign in with SoundCloud</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="signin">sign in</string>
    <string name="registration">Don\'t have a account? Register now</string>
    <string name="bad_connection">Can\'t connect to server</string>
    <string name="bad_credentials">Wrong email or passwrod</string>
    <string name="go_to_app">Go to app</string>
    <string name="search">Search</string>
    <string name="my_tracks">My tracks</string>
    <string name="trends">Trends</string>
    <string name="track_cover">Track cover</string>
    <string name="favourite_tracks">Favourite tracks</string>
    <string name="soundcloud">SoundCloud</string>
    <string name="spotify">Spotify</string>
    <string name="search_for_songs">Search for songs</string>
    <string name="prev_track">Previous track</string>
    <string name="next_track">Next track</string>
    <string name="source">Source</string>
    <string name="now_playing">Now playing</string>
    <string name="error_server">Something wrong with server</string>
    <string name="no_connection">No internet connection</string>
    <string name="add_to_favorite">Add to favourite</string>
    <string name="track_added">Track added to favourites</string>
    <string name="track_not_added">Track not added</string>
    <string name="delete_from_favourite">Delete from favourite</string>
    <string name="track_deleted">Track deleted</string>
    <string name="track_not_deleted">Track not deleted</string>
    <string name="settings">Settings</string>
    <string name="user_settings">User settings</string>
    <string name="network_settings">Network settings</string>
    <string name="other">Other</string>
</resources>
