<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/bottom_action_search"
            android:enabled="true"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/search"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/bottom_action_tracks"
            android:enabled="true"
            android:icon="@drawable/ic_favorite_white_24dp"
            android:title="@string/my_tracks"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/bottom_action_trends"
            android:enabled="true"
            android:icon="@drawable/ic_whatshot_white_24dp"
            android:title="@string/trends"
            app:showAsAction="ifRoom"/>
</menu>