<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout="@layout/settings_title"
        app:title="@string/user_settings">

        <Preference
            app:icon="@drawable/ic_soundcloudlogo"
            app:key=""
            app:summary="SoundCloud user"
            app:title="SoundCloud" />

        <Preference
            app:icon="@drawable/ic_spotifylogo"
            app:key=""
            app:summary="Spotify user"
            app:title="Spotify" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/settings_title"
        app:title="@string/network_settings">


    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/settings_title"
        app:title="@string/other">

    </PreferenceCategory>

</PreferenceScreen>