<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
                name="viewModel"
                type="com.github.kornilovmikhail.spoticloud.ui.main.soundcloudauth.SoundcloudAuthViewModel" />
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.main.soundcloudauth.SoundcloudAuthFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btn_back_soundcloud_auth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_arrow_back_black_48dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/tv_heading_soundcloud_auth"
                    style="@style/TextRegular.ColorBlack.SoundcloudAuthRegularText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/header_soundcloud_auth"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_back_soundcloud_auth" />

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_logo_soundcloud_auth"
                    android:layout_width="0dp"
                    android:layout_height="140dp"
                    android:layout_marginTop="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_heading_soundcloud_auth"
                    app:srcCompat="@drawable/ic_soundcloudlogo" />

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputlayout_email_soundcloud_auth"
                    style="@style/TextRegular.RoundedEditTextLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="@id/gd_vert_end_soundcloud_auth"
                    app:layout_constraintStart_toStartOf="@id/gd_vert_start_soundcloud_auth"
                    app:layout_constraintTop_toBottomOf="@id/iv_logo_soundcloud_auth">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email_soundcloud_auth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputlayout_password_soundcloud_auth"
                    style="@style/TextRegular.RoundedEditTextLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="@id/gd_vert_end_soundcloud_auth"
                    app:layout_constraintStart_toStartOf="@id/gd_vert_start_soundcloud_auth"
                    app:layout_constraintTop_toBottomOf="@id/inputlayout_email_soundcloud_auth"
                    app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password_soundcloud_auth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:id="@+id/tv_error_soundcloud_auth"
                    style="@style/TextRegular.SoundcloudAuthErrorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/inputlayout_password_soundcloud_auth" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_signin_soundcloud"
                    style="@style/ButtonRounded.SoundcloudAuthButtons"
                    android:layout_marginTop="8dp"
                    android:text="@string/signin"
                    app:layout_constraintEnd_toEndOf="@id/gd_vert_end_soundcloud_auth"
                    app:layout_constraintStart_toStartOf="@id/gd_vert_start_soundcloud_auth"
                    app:layout_constraintTop_toBottomOf="@id/tv_error_soundcloud_auth" />

            <ProgressBar
                    android:id="@+id/progress_bar_soundcloud_auth"
                    style="@style/ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isVisible="@{viewModel.progressBarVisibilityLiveData}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gd_vert_start_soundcloud_auth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gd_vert_end_soundcloud_auth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.9" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>